# ProteinTensor

./: .gitignore  9kvc.cif  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: BATCH_CONVERSION.md  DEVELOPMENT.md
scripts/: batch_convert.py  conversion_demo.py  demo.py  test_batch_conversion.py
src/protein_tensor/: __init__.py  batch_converter.py  core.py  io.py  utils.py
tests/: __init__.py  test_batch_conversion.py  test_io.py
